--- a/src/app/client/dashboard/sidenav/sidenav.component.html
+++ b/src/app/client/dashboard/sidenav/sidenav.component.html
@@ -2,7 +2,7 @@
   <div class="logo-container">
       <div class="logo" (click)="toggleCollapse()">
           <!-- Show different logo when sidenav is collapsed -->
-          <img id="logo" [src]="collapsed ? '../../../assets/img/logos/logo-inner.png' : '../../../assets/img/logos/favicon1.png'" alt="logo">
+          <img id="logo" [src]="collapsed ? '../../../assets/img/logos/logo-inner.png' : '../../../assets/img/logos/logo1.png'" alt="logo">
       </div>
       <div class="btn-close" @rotate *ngIf="collapsed" (click)="closeSidenav()">
           <i class="fal fa-times close-icon"></i>
