--- a/src/app/client/signup/signup.component.html
+++ b/src/app/client/signup/signup.component.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="card">
 
-                    <a href="/professionnel" class="card-link" data-toggle="tooltip" data-custom-class="custom-tooltip"
+                    <a href="/professionnel/informations-entreprise" class="card-link" data-toggle="tooltip" data-custom-class="custom-tooltip"
                         title="Le compte bancaire professionnel est idéal pour les entreprises clientes qui souhaitent obtenir une gestion financière efficace et optimiser leurs flux de trésorerie grâce à une gamme de services et d’assistance dédiés.">
                         <div class="card-body">
                             <h5 class="card-title">{{ 'register.type2' | translate }}</h5>
