--- a/src/app/client/transactionsDashboard/transactionsdash/transactionsdash.component.html
+++ b/src/app/client/transactionsDashboard/transactionsdash/transactionsdash.component.html
@@ -55,7 +55,7 @@
                     </div>
                   </div>
                   <div class="col-4 text-end">
-                    <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+                    <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md" (click)="GoToCartes()">
                       <i class="fa fa-plus text-lg opacity-10" aria-hidden="true" style="cursor:  pointer;"></i>
                     </div>
                   </div>
@@ -68,11 +68,7 @@
                 <div class="card-body position-relative z-index-1 d-flex flex-column h-100 p-3">
                   <h5 class="text-white font-weight-bolder mb-4 pt-2">MISE À DISPOSITION DIGITALE</h5>
                   <p class="text-white">METTEZ A DISPOSITION DES FONDS POUR UNE TIERCE PERSONNE DEPUIS VOTRE TÉLÉPHONE SANS VOUS DÉPLACER.</p>
-                  <p class="text-white text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="javascript:;">
-                    De 5.000 FCFA À 5.000 FCFA <br>
-                    <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
-                    FRAIS :1% HT PLAFONNÉS À 15.000 FCFA
-                  </p>
+                 
                 </div>
               </div>
             </div>
