--- a/src/app/home/homepage/homepage.component.html
+++ b/src/app/home/homepage/homepage.component.html
@@ -23,7 +23,7 @@
        
 <app-details></app-details>
 <app-counter></app-counter>
-<app-partners></app-partners>
+<!--<app-partners></app-partners>-->
 <app-blog></app-blog>
 <app-footer></app-footer>
 
