--- a/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.html
+++ b/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.html
@@ -1,32 +1,37 @@
 <div class="card">
     <div class="card-header">
-        <h4>Vos coordonnées d'authentification</h4>
+      <h4>Vos coordonnées d'authentification</h4>
     </div>
     <div class="card-body">
-        <form [formGroup]="authForm">
-            <div class="row">
-                <div class="col-md-6">
-
-                    <div class="form-group">
-                        <div class="input-group">                          
-                            <span class="input-group-text"><i class="bi bi-briefcase-fill"></i></span>
-                            <input type="text" name="login" class="form-control" placeholder="Login" formControlName="login" value=""/>
-
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="input-group">
-                            <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                            <input type="text" name="password" class="form-control" placeholder="Mot de passe" formControlName="password" value=""/>
-
-                        </div>
-                    </div>
-                    
-                </div>
+      <form [formGroup]="authForm">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-briefcase-fill"></i></span>
+                <input type="text" name="login" class="form-control" placeholder="Login" formControlName="login">
+              </div>
+              <div *ngIf="authForm.get('login')?.invalid && (authForm.get('login')?.dirty || authForm.get('login')?.touched)"
+                class="text-danger">
+                <div *ngIf="authForm.get('login')?.hasError('required')">{{ validationMessages.login.required }}</div>
+                <div *ngIf="authForm.get('login')?.hasError('pattern')">{{ validationMessages.login.pattern }}</div>
+              </div>
             </div>
-            <button type="button" class="btn btn-secondary butn" (click)="Suivant('validation')">Envoyer</button>
-
-        </form>
+            <div class="form-group">
+              <div class="input-group">
+                <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                <input type="password" name="password" class="form-control" placeholder="Mot de passe" formControlName="password">
+              </div>
+              <div *ngIf="authForm.get('password')?.invalid && (authForm.get('password')?.dirty || authForm.get('password')?.touched)"
+                class="text-danger">
+                <div *ngIf="authForm.get('password')?.hasError('required')">{{ validationMessages.password.required }}</div>
+                <div *ngIf="authForm.get('password')?.hasError('pattern')">{{ validationMessages.password.pattern }}</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button type="button" class="btn btn-secondary butn" (click)="Suivant('validation')">Envoyer</button>
+      </form>
     </div>
-</div>
+  </div>
+  
